--- a/html/index.html
+++ b/html/index.html
@@ -127,10 +127,6 @@
       </tr>
       <tr>
         <td>Minister in the Prime Minister's Department</td>
-        <td>Idris Ahmad</td>
-      </tr>
-      <tr>
-        <td>Minister in the Prime Minister's Department</td>
         <td>Abdul Latiff Ahmad</td>
       </tr>
       <tr>
@@ -140,6 +136,10 @@
       <tr>
         <td>Minister in the Prime Minister's Department</td>
         <td>Wan Junaidi Tuanku Jaafar</td>
+      </tr>
+      <tr>
+        <td>Minister in the Prime Minister's Department (Religious Affairs)</td>
+        <td>Idris Ahmad</td>
       </tr>
       <tr>
         <td>Attorney General</td>
