--- a/html/index.html
+++ b/html/index.html
@@ -146,6 +146,10 @@
         <td>Idrus Harun</td>
       </tr>
       <tr>
+        <td>Special Adviser to the Prime Minister</td>
+        <td>Jamil Khir Baharom</td>
+      </tr>
+      <tr>
         <td>Speaker of the Dewan Rakyat</td>
         <td>Azhar Azizan Harun</td>
       </tr>
